--- a/signin.html
+++ b/signin.html
@@ -7,30 +7,69 @@
     <meta name="description" content="This is content">
     <meta name="keywords" content="Poll, Election, Online voting">
     <meta name="robots" content="INDEX, FOLLOW">
-    <link rel="stylesheet" href="signin.css">
+    <link rel="stylesheet" href="signup.css">
     <title>Online EVM</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><img src="LOGO.png" alt="THis is LOGO"></li>
-            <li><a href="">Home</a></li>
+            <li><img src="/pollgram.png" alt="THis is LOGO"></li>
+            <li><h1>Make Profile Put Polls Get Opinions Have Fun</h1></li>
+            <!-- <li><a href="">Home</a></li>
             <li><a href="">Create poll</a></li>
-            <li><a href="">vote poll</a></li>
+            <li><a href="">vote poll</a></li> -->
         </ul>
     </nav>
-    <form action="#">
-        <div>
-            Adhar Number: <input type="number" name="adharnumber" id="adharnumber">
-        </div>
-        <div>
-            Password: <input type="password" name="password" id="password">
-        </div>
-        <div>
-            Don't have an account? <a href="signup.html">Sign Up</a>
-            <button>Sign In</button>
-        </div>
+    <section>
+        <div id="container">
 
-    </form>
+            <h1>THIS IS POLLGRAM</h1>
+            <h2>NEW GEN SOCIAL NETWORKING SITE</h2>
+            <p>We have created a website accessible by anyone and anywhere; where they can create polls for their own purposes such as surveys, fun, opinion, governmental schemes, etc. Through this 'Creators' will get to know their audience well, also 'Goverment' will get to know the demands of public. This platform is secured and authentic because we have used secured backend platform for it and also we have linked it with Aadhar system so problems like duplication, fake Id's and any unwated nuisance will not be created. Also we have suggestion section if people are not satisfied with the options in the poll they can suggest another options.</p>
+        </div>
+            <form action="#">
+            <div>
+                <input type="email" name="enter" id="email" value="" placeholder="Email">
+            </div>
+            <div>
+                <input type="password" name="password" id="password" placeholder="Password">
+            </div>
+            <div>
+                Already have an account? <a href="signup.html">Sign Un</a>
+                <button>Sign In</button>
+            </div>
+            
+        </form>
+    </section>
+    <footer>
+        <div id="about">
+            <h3>About Us</h3>
+            <p>We are a group of undergraduate students who developed this in order to fill the void of these kinds of website with polls and opinions having user accounts and profiles , We have assured that it is completely secured and genuine.</p>
+        </div>
+        <div id="pages">
+            <h3>Pages</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Service</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Content</a></li>
+            </ul>
+        </div>
+        <div id="contact">
+            <h3>Contact Info</h3>
+            <ul>
+                <li>Ph number :24893**** </li>
+                <li>info@poll.gram</li>
+                <li>services@poll.gram</li>
+            </ul>
+        </div>
+        <div id="social">
+
+        </div>
+        <div id="pollgram">
+            <img src="/pollgram.png" alt="pollgram logo">
+        </div>
+    </footer>
 </body>
 </html>
