--- a/signin.html
+++ b/signin.html
@@ -36,7 +36,7 @@
             </div>
             <div>
                 Already have an account? <a href="signup.html">Sign Un</a>
-                <button>Sign In</button>
+                <button a href="Poll.html">Sign In</button>
             </div>
             
         </form>
