--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,7 @@
             </div>
             <div>
                 Already have an account? <a href="signin.html">Sign In</a>
-                <button>Sign Up</button>
+                <button a href="signin.html">Sign Up</button>
             </div>
             
         </form>
