--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Poll, Election, Online voting">
     <meta name="robots" content="INDEX, FOLLOW">
     <link rel="stylesheet" href="signup.css">
-    <title>Online EVM</title>
+    <title>Pollgram</title>
 </head>
 <body>
     <nav>
