--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <ul>
-            <li><img src="/pollgram.png" alt="THis is LOGO"></li>
+            <li><img src="pollgram.png" alt="THis is LOGO"></li>
             <li><h1>Make Profile Put Polls Get Opinions Have Fun</h1></li>
             <!-- <li><a href="">Home</a></li>
             <li><a href="">Create poll</a></li>
