--- a/signin.html
+++ b/signin.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="Poll, Election, Online voting">
     <meta name="robots" content="INDEX, FOLLOW">
     <link rel="stylesheet" href="signup.css">
-    <title>Online EVM</title>
+    <title>Pollgram</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><img src="/pollgram.png" alt="THis is LOGO"></li>
+            <li><img src="pollgram.png" alt="This is LOGO"></li>
             <li><h1>Make Profile Put Polls Get Opinions Have Fun</h1></li>
             <!-- <li><a href="">Home</a></li>
             <li><a href="">Create poll</a></li>
@@ -36,7 +36,7 @@
             </div>
             <div>
                 Already have an account? <a href="signup.html">Sign Un</a>
-                <button a href="Poll.html">Sign In</button>
+                <a href="Poll.html"> <button>Sign In</button></a>
             </div>
             
         </form>
