--- a/signin.html
+++ b/signin.html
@@ -35,7 +35,7 @@
                 <input type="password" name="password" id="password" placeholder="Password">
             </div>
             <div>
-                Already have an account? <a href="signup.html">Sign Un</a>
+                Already have an account? <a href="signup.html">Sign Up</a>
                 <a href="Poll.html"> <button>Sign In</button></a>
             </div>
             
