--- a/signin.html
+++ b/signin.html
@@ -35,8 +35,8 @@
                 <input type="password" name="password" id="password" placeholder="Password">
             </div>
             <div>
-                Already have an account? <a href="signup.html">Sign Up</a>
-                <a href="Poll.html"> <button>Sign In</button></a>
+                Don't have an account? <a href="signup.html">Sign Up</a>
+                <a href="Poll.html"> Sign In</a>
             </div>
             
         </form>
