--- a/signin.html
+++ b/signin.html
@@ -36,7 +36,7 @@
             </div>
             <div>
                 Don't have an account? <a href="signup.html">Sign Up</a>
-                <a href="Poll.html"> Sign In</a>
+                <a href="Polling.html"> Sign In</a>
             </div>
             
         </form>
